2007-10-24  John W. Eaton  <jwe@octave.org>

	* FLEX.patch: Delete obsolete file.
	* octMakefile.in (DISTFILES): Remove it from the list.

	* acx_blas.m4: Use "-Wl,-framework -Wl,vecLib" instead of
	just "-framework vecLib" in test for Mac OS X test.

	* configure.in, aclocal.m4: Avoid AC_TRY_EVAL.

	* aclocal.m4 (OCTAVE_STRPTIME_BROKEN): New macro.
	* configure.in: Use it.

2007-10-23  John W. Eaton  <jwe@octave.org>

	* configure.in: When checking for -lf2c, set F2CLIBS instad of
	FLIBS, then set FLIBS to $F2CLIBS just before printing the summary.
	Check for BLAS library calling convention compatibility.

2007-10-17  John W. Eaton  <jwe@octave.org>

	* configure.in: Delete checks for METIS.

2007-10-12  John W. Eaton  <jwe@octave.org>

	* mk-opts.pl (parse_input): Allow comment lines beginning with #.

	* Change copyright notices in all files that are part of Octave to
	GPLv3 or any later version.

	* COPYING: Update to GPLv3.

        * run-octave.in: List args explicitly in exec command.

2007-10-11  John W. Eaton  <jwe@octave.org>

	* config.guess, config.sub: Update from FSF sources.

2007-10-10  Kim Hansen  <kimhanse@gmail.com>

        * run-octave.in: Use $args.  Eliminate "if [ -n "$args" ]" conditional.

2007-10-09  John W. Eaton  <jwe@octave.org>

	* gdbinit.in: Delete.
	* octMakefile.in (DISTFILES): Remove it from the list.
	(.gdbinit): Delete rule.
	(maintainer-clean, distclean): No need to delete .gdbinit.

2007-10-09  Kim Hansen  <kimhanse@gmail.com>

        * run-octave.in: Use gdb with --args, not .gdbinit.

2007-10-08  John W. Eaton  <jwe@octave.org>

	* emacs/octave-hlp.el, emacs/octave-inf.el, emacs/octave-mod.el:
	Sync with GNU Emacs versions.
	* emacs/octave-mod.el: Delete last two args from calls to
	define-abbrev.

2007-10-06  John W. Eaton  <jwe@octave.org>

	* configure.in: Check for lgamma and tgamma.

2007-10-04  John W. Eaton  <jwe@octave.org>

	* configure.in (UGLY_DEFS): Delete special case for darwin.
